--- a/embra_connect_modules/docker-compose.yml
+++ b/embra_connect_modules/docker-compose.yml
@@ -1,23 +1,23 @@
-version: '3'
+version: "3"
 
 services:
   # Web-Client server
   server:
-    build: 
+    build:
       context: ./server
     ports:
-      - "5500:5500"
+      - 5500:5500
 
   # Notebook service
   notebook:
-    build: 
+    build:
       context: ./notebook
     ports:
-      - "8888:8888"
+      - 8888:8888
 
   # DBT service
   dbt_service:
-    build: 
+    build:
       context: ./services/dbt
     ports:
-      - "3000:3000"
+      - 3000:3000
