--- a/embra_connect_editor/docker-compose.yml
+++ b/embra_connect_editor/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 
 services:
-  code-server:
+   editor:
     image: lscr.io/linuxserver/code-server:latest
     container_name: embra_connect_editor
     environment:
@@ -15,7 +15,7 @@ services:
       - PROXY_DOMAIN=code-server.my.domain #optional
       - DEFAULT_WORKSPACE=/config/workspace #optional
     volumes:
-      - /path/to/appdata/config:/config
+      - /config
     ports:
       - 8443:8443
     restart: unless-stopped
