--- a/embra_connect_modules/docker-compose.yml
+++ b/embra_connect_modules/docker-compose.yml
@@ -16,18 +16,7 @@ services:
       - 3000:3000
 
   editor:
-    image: lscr.io/linuxserver/code-server:latest
-    container_name: embra_connect_editor
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-      # - PASSWORD=password #optional
-      - HASHED_PASSWORD= #optional
-      - SUDO_PASSWORD=password #optional
-      - SUDO_PASSWORD_HASH= #optional
-      - PROXY_DOMAIN=code-server.my.domain #optional
-      - DEFAULT_WORKSPACE=/config/workspace #optional
+    image: lexaraprime/embra_connect_editor:1.0
     volumes:
       - /config
     ports:
