--- a/embra_connect_editor/docker-compose.yml
+++ b/embra_connect_editor/docker-compose.yml
@@ -2,20 +2,10 @@ version: "3.3"
 
 services:
    editor:
-    image: lscr.io/linuxserver/code-server:latest
+    build: .
     container_name: embra_connect_editor
-    environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=Etc/UTC
-      # - PASSWORD=password #optional
-      - HASHED_PASSWORD= #optional
-      - SUDO_PASSWORD=password #optional
-      - SUDO_PASSWORD_HASH= #optional
-      - PROXY_DOMAIN=code-server.my.domain #optional
-      - DEFAULT_WORKSPACE=/config/workspace #optional
     volumes:
       - /config
     ports:
-      - 8443:8443
+      - 8080:8080
     restart: unless-stopped
