--- a/embra_connect_modules/server-deployment.yaml
+++ b/embra_connect_modules/server-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: server
-        image: lexaraprime/embra_connect_server
+        image: lexaraprime/embra_connect_server:latest
         ports:
         - containerPort: 5500
