--- a/embra_connect_modules/server/Dockerfile
+++ b/embra_connect_modules/server/Dockerfile
@@ -1,13 +1,4 @@
-FROM rust:latest
-
-# Set working directory
-WORKDIR /server
-
-# Copy contents over to image file system
-COPY . ./
-
-# Compile binary
-RUN cargo build --release
+FROM scratch
 
 # Run binary
 CMD [ "cargo", "run" ]
