--- a/embra_connect_modules/docker-compose.yml
+++ b/embra_connect_modules/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       context: ./server
     ports:
       - 5500:5500
+    restart: unless-stopped
 
   # DBT service
   dbt_service:
@@ -16,11 +17,25 @@ services:
       context: ./services/dbt
     ports:
       - 3000:3000
+    restart: unless-stopped
 
+  # Editor
   editor:
     image: lexaraprime/embra_connect_editor:latest
     volumes:
       - /config
     ports:
-      - 8081:8080
+      - 8988:8888
+    restart: unless-stopped
+
+  # Vault service
+  vault-server:
+    image: hashicorp/vault:latest
+    environment:
+      - VAULT_DEV_ROOT_TOKEN_ID=ec-vault-token
+      - VAULT_DEV_LISTEN_ADDRESS=0.0.0.0:8200
+    ports:
+      - 8200:8200
+    cap_add:
+      - IPC_LOCK
     restart: unless-stopped
