Add generic-auth-module service.

--- a/embra_connect_modules/.env.template
+++ b/embra_connect_modules/.env.template
@@ -1,5 +1,5 @@
 # Oracle Cloud 
-BUCKET_NAME="XXXxxxxXXXXxxxx"
+EMBRA_CONNECT_WORKSPACES="XXXxxxxXXXXxxxx"
 COMPARTMENT_ID="ocid1.tenancy.oc1..XXXxxxxXXXXxxxxXXXXxxxxXXXxxx"
 GITHUB_TOKEN="ghp_XXXxxxxXXXXxxxxXXXXxxxxXXXxxx"
 NAMESPACE="bzxxXXXXXX"
