Remove connect_ide module

--- a/embra_connect_modules/.env.template
+++ b/embra_connect_modules/.env.template
@@ -1,7 +1,12 @@
 # Oracle Cloud 
 EMBRA_CONNECT_WORKSPACES="XXXxxxxXXXXxxxx"
+EMBRA_CONNECT_TEMPLATES="XXXxxxxXXXXxxxx"
+
+# Objects/folders in EMBRA_CONNECT_TEMPLATES
+DBT_TEMPLATE_NAME="dbt_starter_template"
+RUST_TEMPLATE_NAME="rust_starter_template"
+
 COMPARTMENT_ID="ocid1.tenancy.oc1..XXXxxxxXXXXxxxxXXXXxxxxXXXxxx"
-GITHUB_TOKEN="ghp_XXXxxxxXXXXxxxxXXXXxxxxXXXxxx"
 NAMESPACE="bzxxXXXXXX"
 
 # Infisical
@@ -9,3 +14,13 @@ INFISICAL_UNIVERSAL_CLIENT_ID=XXXxxxxXXXXxxxxXXXXxxxxXXXxxx
 INFISICAL_UNIVERSAL_CLIENT_SECRET=XXXxxxxXXXXxxxxXXXXxxxxXXXxxx
 INFISICAL_PROJECT_ID=XXXxxxxXXXXxxxxXXXXxxxxXXXxxx
 INFISICAL_SITE_URL=<infisical-url>
+
+# GitHub
+GITHUB_TOKEN="ghp_xxxXXXxxxXXXxxxXXXxx"
+
+# Managed database
+DATABASE_URL=protocol://domain.com
+DATABASE_NAME=<database_name>
+
+# JWT configuration
+JWT_SECRET=*******************
