--- a/embra_connect_modules/server/Cargo.toml
+++ b/embra_connect_modules/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+jsonwebtoken = "9.3.0"
 rocket = "0.5.1"
 tokio = { version = "1.39.3", features = ["full"] }
 
