--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "embra_connect_modules/services/generic-auth-module"]
 	path = embra_connect_modules/services/generic-auth-module
 	url = https://github.com/Embra-Connect-ETL/generic-auth-module.git
+[submodule "embra_connect_modules/services/connect_ide"]
+	path = embra_connect_modules/services/connect_ide
+	url = https://github.com/Embra-Connect-ETL/Connect-IDE.git
