Update .env template, update submodules

--- a/embra_connect_modules/.env.template
+++ b/embra_connect_modules/.env.template
@@ -24,3 +24,6 @@ DATABASE_NAME=<database_name>
 
 # JWT configuration
 JWT_SECRET=*******************
+
+# Caching
+REDIS=rediss://default:pwd-xxxXXXXxxxXXX@domain.com:6379
