Update Docker config, update submodules

--- a/embra_connect_modules/services/www/Dockerfile
+++ b/embra_connect_modules/services/www/Dockerfile
@@ -1,6 +1,12 @@
-FROM scratch
+FROM rust:1.73-slim-bullseye
 
-# Run binary
-CMD [ "cargo", "run" ]
+WORKDIR /app
 
-EXPOSE 5500
+ENV ROCKET_ADDRESS=0.0.0.0
+ENV ROCKET_PORT=8000
+
+COPY ./target/x86_64-unknown-linux-musl/release/web_app /app/
+
+CMD ["/app/web_app"]
+
+EXPOSE 8000
