--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "embra_connect_modules/services/www"]
 	path = embra_connect_modules/services/www
 	url = https://github.com/Embra-Connect-ETL/www.git
+[submodule "embra_connect_modules/services/ec_gateway"]
+	path = embra_connect_modules/services/ec_gateway
+	url = https://github.com/Embra-Connect-ETL/ec_gateway.git
