--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "embra_connect_modules/services/ec_firewall"]
 	path = embra_connect_modules/services/ec_firewall
 	url = https://github.com/Embra-Connect-ETL/ec_firewall.git
+[submodule "embra_connect_modules/services/ec_api_adapter"]
+	path = embra_connect_modules/services/ec_api_adapter
+	url = https://github.com/Embra-Connect-ETL/ec_api_adapter.git
