--- a/embra_connect_modules/package.json
+++ b/embra_connect_modules/package.json
@@ -15,31 +15,35 @@
         "build:ec_api_adapter": "cargo build --release --manifest-path=services/ec_api_adapter/Cargo.toml",
         "build:www": "cargo build --release --target x86_64-unknown-linux-musl --manifest-path=services/www/Cargo.toml",
         "build:generic-auth-module": "cargo build --release --target x86_64-unknown-linux-musl --manifest-path=services/generic-auth-module/Cargo.toml",
-        "build:mailing_service": "cargo build --release --target x86_64-unknown-linux-musl --manifest-path=services/ec_mailing_service/Cargo.toml",
+        "build:mailing_service": "cargo build --release --manifest-path=services/ec_mailing_service/Cargo.toml",
 
-        "build:docker:ec_connect_ide": "docker build -t irfanghat/ec_connect_ide:latest services/connect_ide",
-        "build:docker:ec_api_adapter": "docker build -t irfanghat/ec_api_adapter:latest services/ec_api_adapter",
-        "build:docker:ec_client": "docker build -t irfanghat/ec_client:latest services/www",
-        "build:docker:ec_access_control": "docker build -t irfanghat/ec_access_control:latest services/generic-auth-module",
-        "build:docker:ec_mailing_service": "docker build -t irfanghat/ec_access_control:latest services/ec_mailing_service",
-        "build:docker:ec_gateway": "docker build -t irfanghat/ec_gateway:latest services/ec_gateway",
+        "build:docker:ec_connect_ide": "docker build -t embraconnect/ec_connect_ide:latest services/connect_ide",
+        "build:docker:ec_api_adapter": "docker build -t embraconnect/ec_api_adapter:latest services/ec_api_adapter",
+        "build:docker:ec_client": "docker build -t embraconnect/ec_client:latest services/www",
+        "build:docker:ec_access_control": "docker build -t embraconnect/ec_access_control:latest services/generic-auth-module",
+        "build:docker:ec_mailing_service": "docker build -t embraconnect/ec_mailing_service:latest services/ec_mailing_service",
+        "build:docker:ec_gateway": "docker build -t embraconnect/ec_gateway:latest services/ec_gateway",
+        "build:docker:ec_firewall": "docker build -t embraconnect/ec_firewall:latest services/ec_firewall",
 
-        "push:docker:ec_connect_ide": "docker push irfanghat/ec_connect_ide:latest",
-        "push:docker:ec_api_adapter": "docker push irfanghat/ec_api_adapter:latest",
-        "push:docker:ec_client": "docker push irfanghat/ec_client:latest",
-        "push:docker:ec_access_control": "docker push irfanghat/ec_access_control:latest",
-        "push:docker:ec_mailing_service": "docker push irfanghat/ec_mailing_service:latest",
-        "push:docker:ec_gateway": "docker push irfanghat/ec_gateway:latest",
+        "push:docker:ec_connect_ide": "docker push embraconnect/ec_connect_ide:latest",
+        "push:docker:ec_api_adapter": "docker push embraconnect/ec_api_adapter:latest",
+        "push:docker:ec_client": "docker push embraconnect/ec_client:latest",
+        "push:docker:ec_access_control": "docker push embraconnect/ec_access_control:latest",
+        "push:docker:ec_mailing_service": "docker push embraconnect/ec_mailing_service:latest",
+        "push:docker:ec_gateway": "docker push embraconnect/ec_gateway:latest",
+        "push:docker:ec_firewall": "docker push embraconnect/ec_firewall:latest",
 
-        "run:ec_connect_ide": "docker run --rm --env-file ./.env -p 7000:7000 irfanghat/ec_connect_ide:latest",
-        "run:ec_api_adapter": "docker run --rm irfanghat/ec_api_adapter:latest",
-        "run:ec_client": "docker run --rm -p 8000:8000 irfanghat/ec_client:latest",
-        "run:ec_access_control": "docker run --rm --env-file ./.env -p 8800:8800 irfanghat/ec_access_control:latest",
-        "run:ec_mailing_service": "docker run --rm --env-file ./.env -p 8880:8880 irfanghat/ec_mailing_service:latest",
-        "run:ec_gateway": "docker run --rm -p 8080:8080 irfanghat/ec_gateway:latest",
+        "push:docker:all": "npm run push:docker:ec_connect_ide && npm run push:docker:ec_client && npm run push:docker:ec_access_control && npm run push:docker:ec_gateway && npm run push:docker:ec_firewall",
+
+        "run:ec_connect_ide": "docker run --rm --env-file ./.env -p 7000:7000 embraconnect/ec_connect_ide:latest",
+        "run:ec_api_adapter": "docker run --rm embraconnect/ec_api_adapter:latest",
+        "run:ec_client": "docker run --rm -p 8000:8000 embraconnect/ec_client:latest",
+        "run:ec_access_control": "docker run --rm --env-file ./.env -p 8800:8800 embraconnect/ec_access_control:latest",
+        "run:ec_mailing_service": "docker run --rm --env-file ./.env -p 8880:8880 embraconnect/ec_mailing_service:latest",
+        "run:ec_gateway": "docker run --rm -p 8081:8081 embraconnect/ec_gateway:latest",
 
         "build:all:binaries": "npm run build:connect_ide && npm run build:ec_api_adapter && npm run build:www && npm run build:generic-auth-module && npm run build:mailing_service",
-        "build:docker:all": "npm run build:docker:ec_connect_ide && npm run build:docker:ec_client && npm run build:docker:ec_access_control && npm run build:docker:ec_gateway && npm run build:docker:ec_mailing_service",
+        "build:docker:all": "npm run build:docker:ec_connect_ide && npm run build:docker:ec_client && npm run build:docker:ec_access_control && npm run build:docker:ec_gateway && npm run build:docker:ec_firewall && npm run build:docker:ec_mailing_service",
 
         "run:all": "npm run run:ec_connect_ide & npm run run:ec_api_adapter & npm run run:ec_client & npm run run:ec_access_control",
         "deploy": "npm run install:deps && npm run clean:all && npm run build:all:binaries && npm run build:docker:all && npm run run:all"
