Update Docker config, update submodules

--- a/embra_connect_modules/.env.infisical.template
+++ b/embra_connect_modules/.env.infisical.template
@@ -1,7 +1,7 @@
 BREVO_API_KEY=
 COMPARTMENT_ID=<oracle-cloud-tenancy-id>
 DATABASE_NAME=
-DATABASE_URL=mongodb://<user>:<password>@mongo:27017/<database>
+DATABASE_URL=mongodb://<user>:<password>@mongo-db:27017/<database>?authSource=admin
 DBT_TEMPLATE_NAME=
 EMBRA_CONNECT_TEMPLATES=
 EMBRA_CONNECT_WORKSPACES=
